--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=rezervacije
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingDB
 spring.datasource.username=nina
 spring.datasource.password=sad
