--- a/smestajMenadzment/pom.xml
+++ b/smestajMenadzment/pom.xml
@@ -8,11 +8,11 @@
         <version>3.3.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>backend</groupId>
-    <artifactId>rezervacije</artifactId>
+    <groupId>smestajMenadzment</groupId>
+    <artifactId>smestajMenadzment</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>rezervacije</name>
-    <description>rezervacije</description>
+    <name>smestajMenadzment</name>
+    <description>smestajMenadzment</description>
     <url/>
     <licenses>
         <license/>
@@ -33,10 +33,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,21 +58,6 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-
-        <dependency>
-            <groupId>menadzerisanjeUser</groupId>
-            <artifactId>menadzerisanjeUser</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>smestajMenadzment</groupId>
-            <artifactId>smestajMenadzment</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
-
     </dependencies>
 
     <build>
