--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "leaflet": "^1.9.4",
     "ngx-leaflet": "^0.0.16",
     "rxjs": "~7.8.0",
