--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>menadzerisanjeUser</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
 
     </dependencies>
